--- a/app/src/main/res/layout/activity_records_history.xml
+++ b/app/src/main/res/layout/activity_records_history.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:stretchColumns="*"
+            android:background="#D3D3D3	"
             android:padding="16dp">
 
             <!-- Header Row -->
@@ -49,28 +50,32 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Date"
-                    android:padding="8dp"
+                    android:padding="@dimen/_8sdp"
                     android:textStyle="bold"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Age"
-                    android:padding="8dp"
+                    android:padding="@dimen/_8sdp"
                     android:textStyle="bold"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Housed"
-                    android:padding="8dp"
+                    android:padding="@dimen/_8sdp"
                     android:textStyle="bold"/>
-                
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
 
                 <TextView
                     android:id="@+id/feedIntake"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Feed Intake"
-                    android:textSize="18sp"
+                    android:padding="@dimen/_8sdp"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -85,15 +90,18 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="STD"
+                        android:layout_marginRight="@dimen/_3ssp"
                         android:gravity="end" />
 
                     <TextView
                         android:id="@+id/actualValue"
                         android:layout_width="0dp"
+                        android:layout_marginLeft="@dimen/_3ssp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Actual"
                         android:gravity="start" />
+                </LinearLayout>
                 </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
